...
            android:layout_gravity="end"
            android:contentDescription="@string/person_icon_description"
            android:background="@drawable/person_icon" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/topToolbar"
        app:layout_constraintBottom_toTopOf="@id/back_button_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back_button_bottom"
        style="@style/landing_button_text"
...
