...
            android:contentDescription="@string/person_icon_description"
            android:background="@drawable/person_icon" />
    </androidx.appcompat.widget.Toolbar>

    <!-- My Events Button -->
    <Button
        android:id="@+id/my_events_button"
        style="@style/landing_button_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/landing_button"
        android:text="@string/my_events_button_text"
        app:layout_constraintBottom_toTopOf="@+id/scan_qr_button"
...
